--- a/Views/Home/LogPartial.cshtml
+++ b/Views/Home/LogPartial.cshtml
@@ -1,14 +1,18 @@
 @model LogUser
 
 <h2>Login</h2>
-<form asp-action="loginUser" asp-controller="Home" method="POST">
+<form asp-action="LoginUser" asp-controller="Home" method="POST">
     <div class="form-group">
-        <small><span asp-validation-for="LogEmail" class="form-text text-danger"></span></small>                                                            
+        <small>
+            <span asp-validation-for="LogEmail" class="form-text text-danger"></span>
+        </small>
         <label asp-for="LogEmail">Email Address</label>
         <input type="text" asp-for="LogEmail" class="form-control" placeholder="Enter email">
     </div>
     <div class="form-group">
-        <small><span asp-validation-for="LogPassword" class="form-text text-danger"></span></small>                                                                                
+        <small>
+            <span asp-validation-for="LogPassword" class="form-text text-danger"></span>
+        </small>
         <label asp-for="LogPassword">Password</label>
         <input type="password" asp-for="LogPassword" class="form-control" aria-describedby="passwordHelp" placeholder="****">
     </div>
