--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -34,7 +34,7 @@
                 <td>
                     <a href="/details/@z.EventId">@z.EventTitle</a>
                 </td>
-                <td>@z.Date.ToString("MMM dd, yyyy") @z.Time.ToString("hh:mm tt")</td>
+                <td>@z.Date.ToString("MMM dd, yyyy @ hh:mm tt")</td>
                 <td>@z.Duration @z.DurationUnits</td>
                 <td>@z.Creator.FirstName</td>
                 <td>@z.Participants.Count</td>
